--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,11 @@
  
  :root {
      --cell-size: 100px;
-     --mark-size: calc(var(--cell-size) * .75)
+     --mark-size: calc(var(--cell-size) * .75);
  }
  
  body {
+     font-family: 'Zilla Slab';
      background: #0a224e;
      width: 100vw;
      height: 100vh;
@@ -117,4 +118,54 @@
  #board .cell.o,
  #board .cell.x {
      cursor: not-allowed;
+ }
+ /****************** winning message **************/
+ 
+ .winning-wrapper {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100vh;
+     background: rgba(0, 0, 0, 0.6);
+     display: flex;
+     z-index: 10;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-direction: column;
+     gap: 2rem;
+     backdrop-filter: blur(4px);
+     color: #fff;
+     transition: all .5s;
+     transform: translateY(-100px);
+     opacity: 0;
+     pointer-events: none;
+ }
+ /* show winning wrapper */
+ 
+ .show-winning {
+     transform: translateY(0);
+     opacity: 1;
+     pointer-events: auto;
+ }
+ 
+ .winning-text {
+     font-size: 3rem;
+ }
+ 
+ .restart-btn {
+     border: 2px solid #fff;
+     padding: 15px 20px;
+     font-family: 'Zilla Slab';
+     border-radius: 4px;
+     font-size: 2rem;
+     color: #fff;
+     background-color: transparent;
+     transition: all .2s;
+ }
+ 
+ .restart-btn:hover {
+     background-color: #000;
+     font-size: 1.9rem;
  }
